--- a/Prac 5 & 6/prac5and6/app/src/main/res/layout/fragment_map.xml
+++ b/Prac 5 & 6/prac5and6/app/src/main/res/layout/fragment_map.xml
@@ -8,6 +8,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mapRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
