--- a/Prac 5 & 6/prac5and6/app/src/main/res/layout/fragment_resource.xml
+++ b/Prac 5 & 6/prac5and6/app/src/main/res/layout/fragment_resource.xml
@@ -8,7 +8,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".resource.ResourceFragment">
+    tools:context=".ResourceFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resourceRecycler"
