--- a/Prac 5 & 6/prac5and6/app/src/main/res/layout/map_list_item_layout.xml
+++ b/Prac 5 & 6/prac5and6/app/src/main/res/layout/map_list_item_layout.xml
@@ -60,8 +60,8 @@
 
     <ImageView
         android:id="@+id/structure"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
